--- a/src/entities/infoCard/UI/styles.module.scss
+++ b/src/entities/infoCard/UI/styles.module.scss
@@ -12,7 +12,7 @@
 }
 
 .count{
-    color: var(--first-text);
+    color: var(--Personal-colors-black);
     font-size: 28px;
     font-style: normal;
     font-weight: 600;
