--- a/src/features/accommPrice/UI/styles.module.scss
+++ b/src/features/accommPrice/UI/styles.module.scss
@@ -14,15 +14,15 @@
     justify-content: space-between;
 
     border-radius: 12px;
-    border: 1px solid var(--Inside-container, #BDBDBD);
-    background: var(--Personal-colors-White, #FFF);
+    border: 1px solid var(--Inside-container);
+    background: var(--Personal-colors-White);
 
     border-radius: 12px;
     align-items: center;
     position: relative;
     padding-right: 20px;
     
-    color: var(--Personal-colors-black, #000);
+    color: var(--Personal-colors-black);
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -31,7 +31,7 @@
     input{
         padding: 20px 15px;
         &::placeholder{
-            color: var(--Text-sample, #A3A0A0);
+            color: var(--Text-sample);
             font-size: 12px;
             font-style: normal;
             font-weight: 400;
@@ -54,9 +54,9 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    color: var(--Gradient-1, linear-gradient(45deg, #4772E6 23.91%, #8E54E9 75.06%));
-    border: 1px solid var(--Gradients-Gradient-1, #4772E6);
-    background: var(--Personal-colors-White, #FFF);
+    color: var(--Gradients-Gradient-1);
+    border: 1px solid #4772E6;
+    background: var(--Personal-colors-White);
 }
 
 .active{
