--- a/src/features/barProfileFilter/UI/styles.module.scss
+++ b/src/features/barProfileFilter/UI/styles.module.scss
@@ -1,6 +1,6 @@
 .types{
     border-radius: 18px;
-    border: 1px solid var(--Gradient-1, #4772E6);
+    border: 1px solid #4772E6;
     width: 100%;
 
 
@@ -16,7 +16,7 @@
         font-weight: 600;
         line-height: normal;
         line-height: 0.75;
-        color: var(--Gradient-1, linear-gradient(45deg, #4772E6 23.91%, #8E54E9 75.06%));
+        color: var(--Gradients-Gradient-1);
     }
 
     li{
@@ -30,6 +30,6 @@
 
 .active{
     border-radius: 12px;
-    background: var(--Gradient-1, linear-gradient(45deg, #4772E6 23.91%, #8E54E9 75.06%));
+    background: var(--Gradients-Gradient-1);
     color: #fff;
 }
