--- a/src/features/selectSymbols/UI/styles.module.scss
+++ b/src/features/selectSymbols/UI/styles.module.scss
@@ -5,7 +5,7 @@
     justify-content: space-between;
 
     p{
-        color: var(--Personal-colors-black, #000);
+        color: var(--Personal-colors-black);
         font-size: 16px;
         font-style: normal;
         font-weight: 500;
@@ -51,7 +51,7 @@
     text-align: center;
 
     p{
-        color: var(--first-text);
+        color: var(--Personal-colors-black);
         font-size: 16px;
         font-style: normal;
         font-weight: 400;
