--- a/src/features/turnkeyProject/UI/styles.module.scss
+++ b/src/features/turnkeyProject/UI/styles.module.scss
@@ -6,9 +6,9 @@
 
     padding: 15px;
     border-radius: 8px;
-    border: 1px solid var(--Gradient-1, #4772E6);
+    border: 1px solid #4772E6;
     background: none;
-    color: var(--Gradient-1, linear-gradient(45deg, #4772E6 23.91%, #8E54E9 75.06%));
+    color: var(--Gradients-Gradient-1);
 
     font-size: 26px;
     font-style: normal;
