--- a/src/shared/ui/MyBtn/styles.module.scss
+++ b/src/shared/ui/MyBtn/styles.module.scss
@@ -8,7 +8,7 @@
   padding: 15px 31px  15px  31px;
   cursor: pointer;
   border-radius: 12px;
-  background: var(--Gradient-1, linear-gradient(90deg, #4772E6 0.03%, #8E54E9 100.36%));
+  background: var(--Gradients-Gradient-1);
 }
 
 .button:hover {
