--- a/src/shared/ui/slider/styles.module.scss
+++ b/src/shared/ui/slider/styles.module.scss
@@ -4,7 +4,7 @@
   border-radius: 30px;
   opacity: 0.65;
   // background-color: #fff ;
-  // background: var(--Gradient-1, linear-gradient(93deg, #4772E6 2.37%, #8E54E9 52.62%));
+  // background: var(--Gradients-Gradient-1);
   outline: none;
   transition: background 0.2s;
 
@@ -16,7 +16,7 @@
     appearance: none;
     width: 15px;
     height: 15px;
-    background: var(--Gradient-2, radial-gradient(419.34% 136.52% at 0% 100%, rgba(255, 255, 255, 0.20) 0%, rgba(125, 117, 117, 0.00) 100%), linear-gradient(90deg, #FF2F66 0%, rgba(254, 110, 48, 0.99) 100%));
+    background: var(--Gradients-Gradient-2);
     border-radius: 50%;
     cursor: pointer;
   }
