--- a/src/widgets/cta/UI/styles.module.scss
+++ b/src/widgets/cta/UI/styles.module.scss
@@ -1,6 +1,7 @@
 .cta__wrapper{
     margin-top: 50px;
     margin-bottom: 50px;
+
   }
   
 .cta__row{
@@ -19,7 +20,7 @@ max-width: 595px;
 }
 
 .cta__title{
-color: var(--first-text);
+color: var(--Personal-colors-black);
 font-size: 44px;
 font-style: normal;
 font-weight: 700;
@@ -33,7 +34,7 @@ font-size: 24px;
 font-style: normal;
 font-weight: 700;
 line-height: normal;
-color: var(--Gradient-1, linear-gradient(90deg, #4772E6 0.03%, #8E54E9 100.36%));
+color: var(--Gradients-Gradient-1);
 background-clip: text;
 margin-bottom: 50px;
 
