--- a/src/widgets/header/UI/nav/styles.module.scss
+++ b/src/widgets/header/UI/nav/styles.module.scss
@@ -7,7 +7,7 @@
     margin: 0;
     text-align: center;
 
-    color: var(--first-text);
+    color: var(--Personal-colors-black);
     font-size: 14px;
     font-style: normal;
     font-weight: 600;
@@ -21,7 +21,7 @@
 
       cursor: pointer;
       padding: 5px  10px ;
-      color: var(--first-text); 
+      color: var(--Personal-colors-black); 
 
       &:hover {
         background-color: #f0f0f0;
