--- a/src/widgets/profileTop/UI/styles.module.scss
+++ b/src/widgets/profileTop/UI/styles.module.scss
@@ -14,7 +14,7 @@
         font-size: 44px;
         font-style: normal;
         font-weight: 600;
-        color: var(--Gradient-1, linear-gradient(45deg, #4772E6 23.91%, #8E54E9 75.06%));
+        color: var(--Gradients-Gradient-1);
     }
 
 
