--- a/src/widgets/services/UI/styles.module.scss
+++ b/src/widgets/services/UI/styles.module.scss
@@ -1,9 +1,9 @@
 .services__wrapper{
-    margin-bottom: 50px;
+    margin-bottom: 100px;
 }
   
 .services__title{
-    color: var(--first-text);
+    color: var(--Personal-colors-black);
     font-size: 32px;
     font-style: normal;
     font-weight: 600;
