--- a/src/widgets/whyChooseUs/UI/styles.module.scss
+++ b/src/widgets/whyChooseUs/UI/styles.module.scss
@@ -6,7 +6,7 @@
   }
   
   .why__title{
-    color: var(--first-text);
+    color: var(--Personal-colors-black);
     font-size: 44px;
     font-style: normal;
     font-weight: 700;
