--- a/src/entities/accommCard/UI/styles.module.scss
+++ b/src/entities/accommCard/UI/styles.module.scss
@@ -6,7 +6,7 @@
 
     &.vencom {
         color: #FFF;
-        background: var(--Gradient-1, linear-gradient(90deg, #4772E6 0.03%, #8E54E9 100.36%));
+        background: var(--Gradients-Gradient-1);
     
 
       }
