--- a/src/entities/advProjectSubcard/UI/styles.module.scss
+++ b/src/entities/advProjectSubcard/UI/styles.module.scss
@@ -26,7 +26,7 @@
     padding: 0 40px;
 
     p{
-        color: var(--first-text);
+        color: var(--Personal-colors-black);
         text-align: center;
         font-size: 12px;
         font-style: normal;
@@ -52,12 +52,12 @@
         width: 64px;
         height: 64px;
         border-radius: 64px;
-        border: 0.5px solid var(--Gradients-Gradient-1, #4772E6);
+        border: 0.5px solid var(--Gradients-Gradient-1);
     }
 }
 
 .channel__column{
-    color: var(--first-text);
+    color: var(--Personal-colors-black);
     border-right:  1px solid #D9D9D9;
     padding: 0 15px;
 
@@ -134,7 +134,7 @@
     }
 
     span{
-        color: var(--first-text);
+        color: var(--Personal-colors-black);
         text-align: center;
         font-size: 10px;
         font-style: normal;
