--- a/src/entities/bloggerModPlatformCard/UI/styles.module.scss
+++ b/src/entities/bloggerModPlatformCard/UI/styles.module.scss
@@ -2,7 +2,7 @@
     display: grid;
     grid-auto-flow: column;
     border-radius: 12px;
-    border: 1px solid var(--Gradient-1, #4772E6);
+    border: 1px solid #4772E6;
     padding: 10px 30px;
     margin-bottom: 10px;
 
@@ -31,7 +31,7 @@
         text-align: left;
 
         p{
-            color: var(--first-text);
+            color: var(--Personal-colors-black);
             font-size: 16px;
             font-style: normal;
             font-weight: 600;
@@ -59,12 +59,12 @@
         width: 64px;
         height: 64px;
         border-radius: 64px;
-        border: 0.5px solid var(--Gradients-Gradient-1, #4772E6);
+        border: 0.5px solid var(--Gradients-Gradient-1);
     }
 }
 
 .card__date{
-    color: var(--first-text);
+    color: var(--Personal-colors-black);
     font-size: 15px;
     font-style: normal;
     font-weight: 600;
@@ -90,7 +90,7 @@
         background: rgba(15, 105, 201, 0.10);
         padding: 20px 0;
     
-        color: var(--first-text);
+        color: var(--Personal-colors-black);
         font-size: 20px;
         font-style: normal;
         font-weight: 500;
@@ -100,7 +100,7 @@
 
 .card__info{
     margin-left: 20px;
-    color: var(--first-text);
+    color: var(--Personal-colors-black);
     font-size: 14px;
     font-style: normal;
     font-weight: 500;
