--- a/src/entities/customerCard/UI/styles.module.scss
+++ b/src/entities/customerCard/UI/styles.module.scss
@@ -21,7 +21,7 @@
 }
 
 .title{
-    color: var(--first-text);
+    color: var(--Personal-colors-black);
 
     font-size: 14px;
     font-style: normal;
