--- a/src/features/barTop/UI/styles.module.scss
+++ b/src/features/barTop/UI/styles.module.scss
@@ -1,12 +1,12 @@
 .top{
-    margin: 40px 25px;
+    margin: 30px 0;
     display: grid;
     grid-auto-flow: column;
     justify-content: space-between;
     align-items: center;
     text-align: center;
     p{
-        color: var(--first-text);
+        color: var(--Personal-colors-black);
         font-size: 26px;
         font-style: normal;
         font-weight: 500;
