--- a/src/features/barTypesFilter/UI/styles.module.scss
+++ b/src/features/barTypesFilter/UI/styles.module.scss
@@ -11,7 +11,7 @@
         font-style: normal;
         font-weight: 500;
         line-height: normal;
-        color: var(--first-text);
+        color: var(--Personal-colors-black);
         line-height: 0.75;
     }
 
@@ -21,7 +21,7 @@
 }
 
 .active{
-    color: var(--Gradient-1, linear-gradient(45deg, #4772E6 23.91%, #8E54E9 75.06%));
-    border-bottom: 3px solid var(--Gradient-1, linear-gradient(45deg, #4772E6 23.91%, #8E54E9 75.06%));
+    color: var(--Gradients-Gradient-1);
+    border-bottom: 3px solid var(--Gradients-Gradient-1);
     padding-bottom: 10px; 
 }
