--- a/src/features/bloggerOfferCard/UI/styles.module.scss
+++ b/src/features/bloggerOfferCard/UI/styles.module.scss
@@ -3,7 +3,7 @@
     grid-auto-flow: column;
 
     border-radius: 12px;
-    border: 1px solid var(--Gradients-Gradient-1, #4772E6);
+    border: 1px solid #4772E6;
     padding: 20px 0;
     margin-bottom: 10px;
     max-width: 1105px;;
@@ -18,7 +18,7 @@
         width: 30px;
         height: 30px;
         border-radius: 30px;
-        border: 0.5px solid var(--Gradients-Gradient-1, #4772E6);
+        border: 0.5px solid var(--Gradients-Gradient-1);
     }
 }
 
@@ -41,7 +41,7 @@
 
 
             p{
-                color: var(--first-text);
+                color: var(--Personal-colors-black);
                 font-size: 12px;
                 font-style: normal;
                 font-weight: 600;
@@ -69,7 +69,7 @@
     padding: 20px 0;
 
     p{
-        color: var(--first-text);
+        color: var(--Personal-colors-black);
         font-size: 20px;
         font-style: normal;
         font-weight: 500;
@@ -79,7 +79,7 @@
 
 
 .channel__column{
-    color: var(--first-text);
+    color: var(--Personal-colors-black);
     border-right:  1px solid #D9D9D9;
     padding: 0 15px;
 
@@ -117,7 +117,7 @@
     grid-auto-flow: row;
     margin-left: 20px;
     border-radius: 12px;
-    border: 1px solid var(--Personal-colors-grey, #BDBDBD);
+    border: 1px solid var(--Personal-colors-grey);
 }
 
 
