--- a/src/features/bloggerPlatformCard/UI/styles.module.scss
+++ b/src/features/bloggerPlatformCard/UI/styles.module.scss
@@ -3,7 +3,7 @@
     grid-auto-flow: row;
 
     border-radius: 12px;
-    border: 1px solid var(--Gradients-Gradient-1, #4772E6);
+    border: 1px solid #4772E6;
     padding-top: 20px ;
     margin-bottom: 10px;
     max-width: 1105px;;
@@ -33,7 +33,7 @@
         width: 64px;
         height: 64px;
         border-radius: 64px;
-        border: 0.5px solid var(--Gradients-Gradient-1, #4772E6);
+        border: 0.5px solid var(--Gradients-Gradient-1);
     }
     svg{
         max-width: 80px;
@@ -58,7 +58,7 @@
             padding-bottom: 10px;
 
             p{
-                color: car(--first-text);
+                color: car(--Personal-colors-black);
                 font-size: 16px;
                 font-style: normal;
                 font-weight: 600;
@@ -91,7 +91,7 @@
     padding: 20px 0;
 
     p{
-        color: var(--first-text);
+        color: var(--Personal-colors-black);
         font-size: 20px;
         font-style: normal;
         font-weight: 500;
@@ -112,7 +112,7 @@
     grid-auto-flow: column;
     align-items: center;
     justify-content: space-between;
-    color: var(--first-text);
+    color: var(--Personal-colors-black);
     font-size: 14px;
     font-style: normal;
     font-weight: 500;
@@ -126,7 +126,7 @@
 
         padding: 10px 20px;
         border-radius: 8px;
-        border: 1px solid var(--Gradients-Gradient-1, #4772E6); 
+        border: 1px solid #4772E6; 
     }
 }
 
@@ -145,7 +145,7 @@
     margin-bottom: 10px;
 
     p{
-        color: var(--first-text);
+        color: var(--Personal-colors-black);
         font-size: 20px;
         font-style: normal;
         font-weight: 600;
@@ -155,7 +155,7 @@
 
     small{
 
-        color: var(--first-text);
+        color: var(--Personal-colors-black);
         font-size: 14px;
         font-style: normal;
         font-weight: 500;
@@ -164,7 +164,7 @@
 }
 
 .offers_exist{
-    color: var(--Gradient-2, linear-gradient(90deg, #FF2F66 0%, rgba(254, 110, 48, 0.99) 100%));
+    color: var(--Gradients-Gradient-2);
 }
 
 .card__more{
@@ -193,11 +193,11 @@
 
 .more{
     margin-top: 20px;
-    background: var(--Gradient-1, linear-gradient(45deg, #4772E6 23.91%, #8E54E9 75.06%));
+    background: var(--Gradients-Gradient-1);
 }
 
 .less{
-    color: var(--Gradient-1, linear-gradient(45deg, #4772E6 23.91%, #8E54E9 75.06%));
+    color: var(--Gradients-Gradient-1);
     background: #FFF;
 }
 
@@ -209,14 +209,14 @@
     margin-top: 10px;
     padding: 10px 10px 0px 10px;
     border-radius: 12px;
-    border-top: 1px solid var(--Gradients-Gradient-1, #4772E6);
+    border-top: 1px solid var(--Gradients-Gradient-1);
 
     button{
         border-radius: 8px;
-        border: 1px solid var(--Gradients-Gradient-1, #4772E6);
+        border: 1px solid #4772E6;
 
         p{
-            color: var(--Gradient-1, linear-gradient(45deg, #4772E6 23.91%, #8E54E9 75.06%));
+            color: var(--Gradients-Gradient-1);
             font-size: 20px;
             font-style: normal;
             font-weight: 500;
