--- a/src/features/partnerList/UI/styles.module.scss
+++ b/src/features/partnerList/UI/styles.module.scss
@@ -1,6 +1,9 @@
 .partners{
     padding: 20px 0 20px 0;
     overflow: hidden;
+    filter: grayscale(100%);
+    opacity: 0.65;
+
     img{
         align-items: center;
     }
