--- a/src/features/rejectPost/UI/styles.module.scss
+++ b/src/features/rejectPost/UI/styles.module.scss
@@ -1,13 +1,13 @@
 .button{
     border-radius: 8px;
-    border: 1px solid var(--Gradients-Gradient-1, #4772E6);
+    border: 1px solid #4772E6;
     padding: 10px;
 
     font-size: 14px;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
-    color: var(--Gradient-1, linear-gradient(45deg, #4772E6 23.91%, #8E54E9 75.06%));
+    color: var(--Gradients-Gradient-1);
     background: none;
 
 }
