--- a/src/features/selectPrice/UI/styles.module.scss
+++ b/src/features/selectPrice/UI/styles.module.scss
@@ -11,7 +11,7 @@
     }
 
     p{
-        color: var(--Personal-colors-black, #000);
+        color: var(--Personal-colors-black);
         font-size: 16px;
         font-style: normal;
         font-weight: 500;
@@ -59,7 +59,7 @@
     margin-bottom: 40px;
 
     p{
-        color: var(--first-text);
+        color: var(--Personal-colors-black);
         font-size: 14px;
         font-style: normal;
         font-weight: 400;
