--- a/src/features/workWithUs/UI/styles.module.scss
+++ b/src/features/workWithUs/UI/styles.module.scss
@@ -3,7 +3,7 @@
 }
 
 .work__title{
-    color: var(--first-text);
+    color: var(--Personal-colors-black);
     font-size: 36px;
     font-style: normal;
     font-weight: 600;
@@ -19,7 +19,7 @@
     height: 150px;
     flex-shrink: 0;
     border-radius: 12px;
-    border: 1px solid var(--Gradient-1, #4772E6);
+    border: 1px solid #4772E6;
     background: #FFF;
 
 
@@ -28,6 +28,6 @@
         height: 80px;
         flex-shrink: 0;
         border-radius: 50%;
-        border: 1px solid var(--Gradient-1, #4772E6);
+        border: 1px solid #4772E6;
     }
 }
