--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -1,10 +1,28 @@
 :root {
-    --container-width: 1270px;
-    --container-padding: 15px;
-    --first-text: #000;
+    --container-width: 1000px;
+    --container-padding-all: 15px;
+    --container-padding-side: 50px;
+    
+    --Personal-colors-black: #000;
     --secondary-text: #606060;
-    --Gradient-1: #4772E6;
-    --Gradient-2: #FF2F66;
+    
+    --Gradients-Gradient-1: linear-gradient(45deg, #4772E6 23.91%, #8E54E9 75.06%);
+    --Gradients-Gradient-2: radial-gradient(419.34% 136.52% at 0% 100%, rgba(255, 255, 255, 0.20) 0%, rgba(125, 117, 117, 0.00) 100%), linear-gradient(90deg, #FF2F66 0%, rgba(254, 110, 48, 0.99) 100%);
+    --Gradients-Gradient-4: linear-gradient(63deg, #FFCA28 0%, rgba(254, 110, 48, 0.99) 83.33%);
+    --Gradients-Gradient-5: linear-gradient(90deg, #314479 0%, #51377A 100%);
+    --Gradients-Gradient-6: linear-gradient(37deg, #FFEF28 0%, rgba(254, 52, 48, 0.99) 71.43%);
+
+    --Personal-colors-black: #000;
+    --Personal-colors-Green: #48D23C;
+    --Personal-colors-green-hover: #6BDA62;
+    --Personal-colors-Click: #EFE6FF;
+    --Orange: #FFA04F;
+
+    --Text-sample: #A3A0A0;
+    --choosen-text: #808080;
+    --Inside-container: #BDBDBD;
+    --Personal-colors-grey: #BDBDBD;
+
     --woman: 50;
     --man: 50%;
 }
