--- a/src/shared/ui/MySelect/styles.module.scss
+++ b/src/shared/ui/MySelect/styles.module.scss
@@ -4,8 +4,8 @@
     padding: 20px 25px;
 
     border-radius: 12px;
-    border: 1px solid var(--Inside-container, #BDBDBD);
-    background: var(--Personal-colors-White, #FFF);
+    border: 1px solid var(--Inside-container);
+    background: var(--Personal-colors-White);
 
 
     color: #A3A0A0;
