--- a/src/shared/ui/incomeCalculator/styles.module.scss
+++ b/src/shared/ui/incomeCalculator/styles.module.scss
@@ -4,7 +4,7 @@
   
   
   .income__title{
-    color: var(--first-text);
+    color: var(--Personal-colors-black);
     font-size: 20px;
     font-style: normal;
     font-weight: 600;
@@ -12,7 +12,7 @@
   }
   
   .income__cash{
-    color: var(--first-text);
+    color: var(--Personal-colors-black);
     font-size: 32px;
     font-style: normal;
     font-weight: 600;
