--- a/src/shared/ui/themeChanger/styles.module.scss
+++ b/src/shared/ui/themeChanger/styles.module.scss
@@ -6,7 +6,7 @@
       font-style: normal;
       font-weight: 600;
       line-height: normal;
-      color: var(--Gradient-2, linear-gradient(90deg, #FF2F66 0%, rgba(254, 110, 48, 0.99) 100%));
+      color: var(--Gradients-Gradient-2);
       margin-bottom: 10px;
     }
     
@@ -14,7 +14,7 @@
       width: 390px;
       height: 60px;
       border-radius: 12px;
-      border: 1px solid var(--Gradient-1, #4772E6);
+      border: 1px solid #4772E6;
       padding: 20px;
       color: rgba(0, 0, 0, 0.5);
       cursor: pointer;
