--- a/src/widgets/barFilter/UI/styles.module.scss
+++ b/src/widgets/barFilter/UI/styles.module.scss
@@ -1,10 +1,11 @@
 .profile__filter{
-display: grid;
-grid-auto-flow: row;
+// display: grid;
+// grid-auto-flow: row;
 
     hr{
         height: 2px;
         background: #D9D9D9;
+        margin-bottom: 20px;
     }
 }
 
@@ -15,7 +16,7 @@ grid-auto-flow: row;
     grid-auto-flow: row;
 
     border-radius: 12px;
-    border: 1px solid var(--Gradients-Gradient-1, #4772E6);
+    border: 0.5px solid #4772E6;
     padding-top: 20px ;
     // margin-bottom: 20px;
     max-width: 1105px;
@@ -43,7 +44,7 @@ grid-auto-flow: row;
         font-style: normal;
         font-weight: 600;
         line-height: normal;
-        color: var(--first-text);
+        color: var(--Personal-colors-black);
     }
 
     span{
@@ -82,7 +83,7 @@ grid-auto-flow: row;
             font-style: normal;
             font-weight: 600;
             line-height: normal;
-            color: var(--first-text);
+            color: var(--Personal-colors-black);
         }
     }
 }
@@ -111,7 +112,7 @@ grid-auto-flow: row;
         display: grid;
         grid-auto-flow: column;
         column-gap: 10px;
-        color: car(--first-text);
+        color: car(--Personal-colors-black);
 
         p{
 
@@ -122,7 +123,7 @@ grid-auto-flow: row;
         }
 
         span{
-            color: #000;
+            color: var(--Personal-colors-black);
             font-size: 14px;
             font-style: normal;
             font-weight: 500;
@@ -138,7 +139,7 @@ grid-auto-flow: row;
     grid-auto-flow: column;
     align-items: center;
     justify-content: space-between;
-    color: var(--first-text);
+    color: var(--Personal-colors-black);
     font-size: 14px;
     font-style: normal;
     font-weight: 500;
@@ -152,7 +153,7 @@ grid-auto-flow: row;
 
         padding: 10px 20px;
         border-radius: 8px;
-        border: 1px solid var(--Gradients-Gradient-1, #4772E6); 
+        border: 1px solid #4772E6; 
     }
 }
 
@@ -180,11 +181,11 @@ grid-auto-flow: row;
 
 .more{
     margin-top: 20px;
-    background: var(--Gradient-1, linear-gradient(45deg, #4772E6 23.91%, #8E54E9 75.06%));
+    background: var(--Gradients-Gradient-1);
 }
 
 .less{
-    color: var(--Gradient-1, linear-gradient(45deg, #4772E6 23.91%, #8E54E9 75.06%));
+    color: var(--Gradients-Gradient-1);
     background: #FFF;
 }
 
@@ -197,8 +198,8 @@ grid-auto-flow: row;
     margin-top: 20px;
     padding: 10px;
     border-radius: 12px;
-    border: 1px solid var(--Gradient-1, #4772E6);
-    background: var(--Personal-colors-White, #FFF);
+    border: 1px solid #4772E6;
+    background: var(--Personal-colors-White);
 }
 
 .subcard__row{
@@ -223,7 +224,7 @@ grid-auto-flow: row;
     border-right:  1px solid #D9D9D9;
 
     p{
-        color: var(--first-text);
+        color: var(--Personal-colors-black);
         text-align: center;
         font-size: 12px;
         font-style: normal;
@@ -249,12 +250,12 @@ grid-auto-flow: row;
         width: 64px;
         height: 64px;
         border-radius: 64px;
-        border: 0.5px solid var(--Gradients-Gradient-1, #4772E6);
+        border: 0.5px solid var(--Gradients-Gradient-1);
     }
 }
 
 .channel__column{
-    color: var(--first-text);
+    color: var(--Personal-colors-black);
     border-right:  1px solid #D9D9D9;
     padding: 0 15px;
 
@@ -331,7 +332,7 @@ grid-auto-flow: row;
     }
 
     span{
-        color: var(--first-text);
+        color: var(--Personal-colors-black);
         text-align: center;
         font-size: 10px;
         font-style: normal;
