--- a/src/widgets/customers/UI/styles.module.scss
+++ b/src/widgets/customers/UI/styles.module.scss
@@ -3,7 +3,7 @@
   }
   
 .customer__title{
-    color: var(--first-text);
+    color: var(--Personal-colors-black);
     font-size: 44px;
     font-style: normal;
     font-weight: 600;
