--- a/src/widgets/header/UI/dropdownMenu/styles.module.scss
+++ b/src/widgets/header/UI/dropdownMenu/styles.module.scss
@@ -1,22 +1,28 @@
 .dropdown {
   position: relative;
-  margin-right: 20px;
+  // margin-right: 20px;
 }
   
 .menu {
-  padding: 15px;
-  width: 470px;
-  min-height: 720px;
+  padding: 25px 20px;
+  height: 100%;
 
   position: fixed; 
   top: 0;
+  left: 0;
   background-color: #fff;
   border: 1px solid #ccc;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   z-index: 10;
 
+  hr{
+      height: 1px;
+      background: #D9D9D9;
+      margin: 25px 0;
+  }
+
   ul {
-    color: var(--first-text);
+    color: var(--Personal-colors-black);
     list-style: none;
     padding: 10px;
 
@@ -55,8 +61,8 @@
   --width: 40px;
   --height: 40px;
   --line-height: 2px;
-  // --color: var(--Gradient-1, linear-gradient(90deg, #4772E6 0.03%, #8E54E9 100.36%));;
-  --color: var(--first-text);;
+  // --color: var(--Gradients-1);;
+  --color: var(--Personal-colors-black);;
 
   height: var(--height);
   width: var(--width);
@@ -134,7 +140,7 @@
   padding: 5px;
   justify-content: center;
   border-radius: 25px;
-  border: 0.1px solid var(--Gradient-1, #4772E6);
+  border: 0.1px solid #4772E6;
   display: inline-flex;
   align-items: center;
   margin-bottom: 20px;
@@ -156,7 +162,7 @@
 
 .active{
 
-  background: var(--Gradient-1, linear-gradient(93deg, #4772E6 2.37%, #8E54E9 52.62%));
+  background: var(--Gradients-Gradient-1);
   color: #fff;
 }
 
