--- a/src/widgets/header/UI/lang/styles.module.scss
+++ b/src/widgets/header/UI/lang/styles.module.scss
@@ -3,17 +3,15 @@
   font-style: normal;
   font-weight: 600;
   line-height: 12px;
-  margin-right: 40px;
 
   button {
     display: grid;
     align-content: center;
     justify-content: center;
-    // width: 65px;
-    padding: 0 22px;
+    padding: 6px 15px;
     height: 25px;
     border-radius: 12px;
-    border: 1px solid var(--Gradient-1, #4772E6);
+    border: 1px solid #4772E6;
     color: var(--first-text);
     cursor: pointer;
     position: relative;
@@ -27,14 +25,13 @@
     display: block;
     position: absolute;
     background-color: #fff;
-    border: 1px solid #ccc;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     z-index: 1;
     border-radius: 12px;
     overflow: hidden;
   
     li {
-      padding: 8px 15px;
+      padding: 8px;
       cursor: pointer;
       display: grid;
       grid-auto-flow: column;
