--- a/src/widgets/header/UI/profile/styles.module.scss
+++ b/src/widgets/header/UI/profile/styles.module.scss
@@ -12,9 +12,8 @@
   position: absolute;
   margin-top: 5px;
   right: 0;
-  color: var(--first-text);
+  color: var(--Personal-colors-black);
   background-color: #fff;
-  border: 1px solid #ccc;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   z-index: 1;
   width: 170px;
@@ -39,11 +38,11 @@
 
     &:hover {
       background-color: #f0f0f0;
-      color: var(--Gradient-1, linear-gradient(93deg, #4772E6 2.37%, #8E54E9 52.62%));
+      color: var(--Gradients-Gradient-1);
     }
   }
 }
 
 .logout{
-  color: var(--Gradient-2, linear-gradient(90deg, #FF2F66 0%, rgba(254, 110, 48, 0.99) 100%));
+  color: var(--Gradients-Gradient-2);
 }
