--- a/src/widgets/howItWorks/UI/styles.module.scss
+++ b/src/widgets/howItWorks/UI/styles.module.scss
@@ -1,21 +1,23 @@
 .how__wrapper{
     max-width: var(--container-width);
     height: 749px;
-    background: #4772E6;
-    border-radius: 50px;
-    margin-bottom: 100px;
+    background: var(--Gradients-Gradient-1);
+    border-radius: 50px 50px 0 50px;
     position: relative;
+    margin: 0 auto 100px auto;
+    overflow: hidden;
   
     &::before{
       content: '';
-      background-image: url('/images/assets/RoadBlock.png') ;
+      background-image: url('/images/assets/steps.svg') ;
       background-size: contain; 
       background-repeat: no-repeat;
       position: absolute;
       top: 170px;
       left: 50px;
-      width: 100%;
+      width: calc(100% - var(--container-padding-side));
       height: 71%;
+      overflow: hidden;
     }
   }
   
