--- a/src/widgets/partners/UI/styles.module.scss
+++ b/src/widgets/partners/UI/styles.module.scss
@@ -2,23 +2,46 @@
     align-items: center;
     text-align: center;
     margin-bottom: 100px;
-    max-width: var(--container-width);
   }
 
 .partners__title{
-    color: var(--first-text);
+    color: var(--Personal-colors-black);
     font-size: 32px;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 }
 
-.partners__block{
-    background-image: url('/images/assets/bb.svg') ;
-    background-repeat: no-repeat; 
-    background-size: cover; 
+.partners__block {
     z-index: -1;
     width: 100%;
     padding: 20px 0;
+    position: relative;
+    overflow: hidden;
+
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        // background: var(--Gradients-Gradient-1);
+        opacity: 0.1;
+    }
+
+    &::after {
+        content: "";
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        // background: url('/images/assets/circles.svg') bottom;
+        background-repeat: no-repeat;
+        background-size: cover;
+        transform: translateX(30%);
+        opacity: 0.35;
+    }
 }
