--- a/src/widgets/platformIdentification/UI/styles.module.scss
+++ b/src/widgets/platformIdentification/UI/styles.module.scss
@@ -1,9 +1,9 @@
 .wrapper{
-
-    max-width: 1133px;
+    max-width: var(--container-width);
     border-radius: 40px;
-    border: 1px solid var(--Personal-colors-grey, #BDBDBD);
-    background: var(--Personal-colors-White, #FFF);
+    border: 1px solid var(--Personal-colors-grey);
+    background: var(--Personal-colors-White);
+    margin: 0 auto 50px auto;
 }
 
 .top{
@@ -14,7 +14,7 @@
 
     padding: 50px 40px;
     border-radius: 40px 40px 0px 40px;
-    background: var(--Gradient-1, linear-gradient(45deg, #4772E6 23.91%, #8E54E9 75.06%));
+    background: var(--Gradients-Gradient-1);
 
     justify-content: start;
     color: #FFF;
@@ -41,12 +41,12 @@
 
 .blur{
     border-radius: 40px;
-    color: var(--Gradient-1, linear-gradient(45deg, #4772E6 23.91%, #8E54E9 75.06%));
-    border: 1px solid var(--Personal-colors-grey, #BDBDBD);
-    background: var(--Personal-colors-White, #FFF);
+    color: var(--Gradients-Gradient-1);
+    border: 1px solid var(--Personal-colors-grey);
+    background: var(--Personal-colors-White);
 
     span {
-        border: 4px dashed var(--Gradient-1, #4772E6);
+        border: 4px dashed var(--Gradients-Gradient-1);
     }
 
     p, span{
@@ -81,9 +81,9 @@
 
 .platform__btn{
     border-radius: 12px;
-    border: 1px solid var(--Gradient-1, #4772E6);
-    background: var(--Personal-colors-White, #FFF);
-    color: var(--Gradient-1, linear-gradient(45deg, #4772E6 23.91%, #8E54E9 75.06%));
+    border: 1px solid #4772E6;
+    background: var(--Personal-colors-White);
+    color: var(--Gradients-Gradient-1);
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -92,12 +92,12 @@
 
 
     &.check{
-        color: var(--Personal-colors-White, #FFF);
+        color: var(--Personal-colors-White);
         font-size: 20px;
         font-style: normal;
         font-weight: 600;
         line-height: normal;
-        background: var(--Personal-colors-grey, #BDBDBD);
+        background: var(--Personal-colors-grey);
         border: none;
     }
 
@@ -107,9 +107,9 @@
 }
 
 .platform__active{
-    color: var(--Personal-colors-White, #FFF);
-    border: 1px solid var(--Gradient-1, #4772E6);
-    background: var(--Gradient-1, linear-gradient(45deg, #4772E6 23.91%, #8E54E9 75.06%));
+    color: var(--Personal-colors-White);
+    border: 1px solid #4772E6;
+    background: var(--Gradients-Gradient-1);
     
 }
 
@@ -117,9 +117,9 @@
 .platform__input{
     border-radius: 12px;
     padding: 20px;
-    border: 1px solid var(--Personal-colors-grey, #BDBDBD);
+    border: 1px solid var(--Personal-colors-grey);
     background: rgba(189, 189, 189, 0.25);
-    color: var(--Grey-text, #A3A0A0);
+    color: var(--Text-sample);
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
@@ -128,11 +128,11 @@
 
 .complite{
     border-radius: 40px;
-    color: var(--Gradient-1, linear-gradient(45deg, #4772E6 23.91%, #8E54E9 75.06%));
-    border: 1px solid var(--Gradient-1, #4772E6);
-    background: var(--Personal-colors-White, #FFF);
+    color: var(--Gradients-Gradient-1);
+    border: 1px solid #4772E6;
+    background: var(--Personal-colors-White);
 
     span {
-        border: 4px solid var(--Gradient-1, #4772E6);
+        border: 4px solid var(--Gradients-Gradient-1);
     }
 }
