--- a/src/widgets/profileCard/UI/styles.module.scss
+++ b/src/widgets/profileCard/UI/styles.module.scss
@@ -5,6 +5,6 @@
     padding: 40px 50px 50px 50px;
     margin-bottom: 150px;
     border-radius: 40px;
-    border: 1px solid var(--Inside-container, #BDBDBD);
-    background: var(--Personal-colors-White, #FFF);
+    border: 1px solid var(--Inside-container);
+    background: var(--Personal-colors-White);
 }
