--- a/src/entities/priceCard/UI/styles.module.scss
+++ b/src/entities/priceCard/UI/styles.module.scss
@@ -1,5 +1,5 @@
 .price__card{
-    max-width: 360px;
+    width: 100%;
     padding: 20px 20px 20px 20px;
     border-radius: 40px 40px 0px 40px;
     background: rgba(255, 255, 255, 0.85);
