--- a/src/features/accommList/UI/styles.module.scss
+++ b/src/features/accommList/UI/styles.module.scss
@@ -1,6 +1,5 @@
 .why__row{
   display: grid;
-  grid-auto-flow: column;
-  justify-content: center;
+  grid-template: 1fr / repeat(2, 1fr);
   column-gap: 50px;
 }
