--- a/src/features/bloggerPlatformCard/UI/styles.module.scss
+++ b/src/features/bloggerPlatformCard/UI/styles.module.scss
@@ -1,63 +1,63 @@
-.card{
+.card {
     display: grid;
     grid-auto-flow: row;
-
     border-radius: 12px;
     border: 1px solid #4772E6;
-    padding-top: 20px ;
+    padding-top: 20px;
     margin-bottom: 10px;
-    max-width: 1105px;;
+    width: 100%;
 
-    hr{
+    hr {
         height: 1px;
         background: #D9D9D9;
         margin-bottom: 20px;
     }
 }
 
-.card__top{
+.card__top {
     display: grid;
     grid-auto-flow: column;
     justify-content: space-between;
 }
 
-.channel__logo{
+.channel__logo {
     display: grid;
     align-items: center;
     justify-items: center;
-    border-right:  1px solid #D9D9D9;
+    border-right: 1px solid #D9D9D9;
     margin-left: 20px;
     padding-right: 20px;
 
-    img{
+    img {
         width: 64px;
         height: 64px;
         border-radius: 64px;
         border: 0.5px solid var(--Gradients-Gradient-1);
     }
-    svg{
+
+    svg {
         max-width: 80px;
     }
 }
 
-.card__description{
+.card__description {
     display: grid;
     grid-auto-flow: row;
-    border-right:  1px solid #D9D9D9;
+    border-right: 1px solid #D9D9D9;
     margin-left: 20px;
     padding-right: 20px;
 
-    div{
+    div {
         display: grid;
         grid-auto-flow: column;
 
 
-        div{
+        div {
             display: grid;
-            grid-auto-flow: row;   
+            grid-auto-flow: row;
             padding-bottom: 10px;
 
-            p{
+            p {
                 color: car(--Personal-colors-black);
                 font-size: 16px;
                 font-style: normal;
@@ -65,16 +65,17 @@
                 line-height: 0.75;
             }
 
-            span{
+            span {
                 color: rgba(0, 0, 0, 0.60);
                 font-size: 12px;
                 font-style: normal;
                 font-weight: 500;
                 // line-height: 0.75;
             }
-            div{
+
+            div {
                 display: grid;
-                grid-auto-flow: column;  
+                grid-auto-flow: column;
                 column-gap: 10px;
             }
         }
@@ -82,7 +83,7 @@
 }
 
 
-.status{
+.status {
     display: grid;
     align-items: center;
     justify-content: center;
@@ -90,7 +91,7 @@
     background: rgba(15, 105, 201, 0.10);
     padding: 20px 0;
 
-    p{
+    p {
         color: var(--Personal-colors-black);
         font-size: 20px;
         font-style: normal;
@@ -99,15 +100,15 @@
     }
 }
 
-.card__right{
+.card__right {
     display: grid;
     grid-auto-flow: row;
-    border-right:  1px solid #D9D9D9;
+    border-right: 1px solid #D9D9D9;
     margin-left: 20px;
     padding-right: 20px;
 }
 
-.card__info{
+.card__info {
     display: grid;
     grid-auto-flow: column;
     align-items: center;
@@ -118,7 +119,7 @@
     font-weight: 500;
     line-height: normal;
 
-    div{
+    div {
         display: grid;
         grid-auto-flow: column;
         align-items: center;
@@ -126,25 +127,25 @@
 
         padding: 10px 20px;
         border-radius: 8px;
-        border: 1px solid #4772E6; 
+        border: 1px solid #4772E6;
     }
 }
 
-.card__info2{
+.card__info2 {
     display: grid;
     grid-auto-flow: column;
     align-items: center;
     justify-content: space-between;
 }
 
-.card__offers{
+.card__offers {
     display: grid;
     grid-auto-flow: column;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 10px;
 
-    p{
+    p {
         color: var(--Personal-colors-black);
         font-size: 20px;
         font-style: normal;
@@ -153,7 +154,7 @@
 
     }
 
-    small{
+    small {
 
         color: var(--Personal-colors-black);
         font-size: 14px;
@@ -163,25 +164,25 @@
     }
 }
 
-.offers_exist{
+.offers_exist {
     color: var(--Gradients-Gradient-2);
 }
 
-.card__more{
+.card__more {
     padding: 0 15px;
     display: grid;
     grid-auto-flow: row;
     justify-content: space-between;
 
-    svg{
+    svg {
         width: 30px;
     }
 }
 
-.card__btn{
+.card__btn {
     padding: 11px 0;
     width: 100%;
-    
+
     color: #FFF;
     font-size: 12px;
     font-style: normal;
@@ -191,18 +192,18 @@
     border-radius: 12px;
 }
 
-.more{
+.more {
     margin-top: 20px;
     background: var(--Gradients-Gradient-1);
 }
 
-.less{
+.less {
     color: var(--Gradients-Gradient-1);
     background: #FFF;
 }
 
 
-.platform_events{
+.platform_events {
     display: grid;
     grid-auto-flow: column;
     justify-content: space-between;
@@ -211,11 +212,11 @@
     border-radius: 12px;
     border-top: 1px solid var(--Gradients-Gradient-1);
 
-    button{
+    button {
         border-radius: 8px;
         border: 1px solid #4772E6;
 
-        p{
+        p {
             color: var(--Gradients-Gradient-1);
             font-size: 20px;
             font-style: normal;
