feat: add sidebar, add Profile Page

--- a/src/features/barProfileFilter/UI/styles.module.scss
+++ b/src/features/barProfileFilter/UI/styles.module.scss
@@ -1,35 +1,29 @@
-.types{
+.types {
     border-radius: 18px;
     border: 1px solid #4772E6;
-    width: 100%;
-
-
-    ul{
-        display: grid;
-        grid-auto-flow: column;
-        column-gap: 25px;
-        justify-content: center;
-        align-items: center;
-
-        font-size: 28px;
-        font-style: normal;
-        font-weight: 600;
-        line-height: normal;
-        line-height: 0.75;
-        color: var(--Gradients-Gradient-1);
-    }
-
-    li{
+    overflow: hidden;
+  
+    ul {
+      display: flex; /* Используем flex контейнер */
+      font-size: 28px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
+      line-height: 0.75;
+      color: #4772E6;
+  
+      li {
         text-align: center;
-        padding: 10px;
-        min-width: 100px;
+        padding: 20px 0;
         cursor: pointer;
+        flex: 1; /* Равномерно распределить пространство между элементами */
+        max-width: 33.33%; /* Ограничить каждый элемент шириной трети родителя */
+      }
     }
-
-}
-
-.active{
-    border-radius: 12px;
+  }
+  
+  .active {
     background: var(--Gradients-Gradient-1);
     color: #fff;
-}
+  }
+  
