--- a/src/features/bloggerOfferCard/UI/styles.module.scss
+++ b/src/features/bloggerOfferCard/UI/styles.module.scss
@@ -6,7 +6,8 @@
     border: 1px solid #4772E6;
     padding: 20px 0;
     margin-bottom: 10px;
-    max-width: 1105px;;
+    width: 100%;
+    // max-width: 1105px;;
 
     hr{
         height: 1px;
