--- a/src/widgets/barFilter/UI/styles.module.scss
+++ b/src/widgets/barFilter/UI/styles.module.scss
@@ -19,7 +19,8 @@
     border: 0.5px solid #4772E6;
     padding-top: 20px ;
     // margin-bottom: 20px;
-    max-width: 1105px;
+    // max-width: 1105px;
+    width: 100%;
 
 }
 
