--- a/src/widgets/header/UI/profile/styles.module.scss
+++ b/src/widgets/header/UI/profile/styles.module.scss
@@ -38,11 +38,11 @@
 
     &:hover {
       background-color: #f0f0f0;
-      color: var(--Gradients-Gradient-1);
+      color: #4772E6;
     }
   }
 }
 
 .logout{
-  color: var(--Gradients-Gradient-2);
+  color: #FF2F66;
 }
