--- a/src/entities/priceCard/UI/styles.module.scss
+++ b/src/entities/priceCard/UI/styles.module.scss
@@ -34,11 +34,11 @@
 }
 
 .standard{
-    border: 2px solid var(--Gradients-Gradient-1);
+    border: 2px solid #4772E6;
 }
 
 .complex{
-    border: 2px solid var(--Gradients-Gradient-2);
+    border: 2px solid #FF2F66;
 }
 
 .title{
