--- a/src/features/barTypesFilter/UI/styles.module.scss
+++ b/src/features/barTypesFilter/UI/styles.module.scss
@@ -21,7 +21,8 @@
 }
 
 .active{
-    color: var(--Gradients-Gradient-1);
-    border-bottom: 3px solid var(--Gradients-Gradient-1);
+    // color: var(--Gradients-Gradient-1);
+    color: #4772E6;
+    border-bottom: 3px solid #4772E6;
     padding-bottom: 10px; 
 }
