--- a/src/shared/ui/MyInput/styles.module.scss
+++ b/src/shared/ui/MyInput/styles.module.scss
@@ -1,7 +1,7 @@
 .input {
     width: 100%;
     padding: 10px;
-    margin:  10px 0;
+    // margin:  10px 0;
     font-size: 16px;
     color: #555; /* Серый цвет текста */
     border: 1px solid #ccc; /* Серый цвет границы */
