--- a/src/widgets/profileCard/UI/styles.module.scss
+++ b/src/widgets/profileCard/UI/styles.module.scss
@@ -1,10 +1,45 @@
 .wrapper{
     display: grid;
     grid-auto-flow: row;
+    row-gap: 40px;
     align-items: center;
-    padding: 40px 50px 50px 50px;
+    padding: 45px 50px 50px 50px;
     margin-bottom: 150px;
-    border-radius: 40px;
+    border-radius: 50px;
     border: 1px solid var(--Inside-container);
     background: var(--Personal-colors-White);
+}
+
+
+.block{
+    display: grid;
+    grid-auto-flow: row;
+    align-items: center;
+    row-gap: 40px;
+    padding: 0 80px;
+}
+
+
+.accept{
+    display: grid;
+    grid-auto-flow: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    column-gap: 10px;
+    input{
+        cursor: pointer;
+    }
+
+    p{
+        color: var(--Personal-colors-black);
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+
+        span{
+            color: #44C4FF;
+        }
+    }
 }
