--- a/src/widgets/profileTop/UI/styles.module.scss
+++ b/src/widgets/profileTop/UI/styles.module.scss
@@ -1,29 +1,39 @@
 .wrapper{
     display: grid;
-    grid-auto-flow: column;
+    grid-template: 1fr / minmax(40px, 50px) 1fr;
     align-items: center;
-    justify-content: space-between;
+    margin: 50px auto;
+    max-width: var(--container-width);
 
-    svg{
-        width: 50px;
-        height: 50px;
+    button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+        svg{
+            width: 50px;
+            height: 50px;
+        }
     }
 
-    p{
-        text-align: center;
-        font-size: 44px;
-        font-style: normal;
-        font-weight: 600;
-        color: var(--Gradients-Gradient-1);
-    }
 
-
+    
+    
     div{
         display: grid;
-        grid-auto-flow: column;
+        justify-content: center;
         align-items: center;
-        column-gap: 20px;
+        grid-auto-flow: column;
+        gap: 10px;
         
+        p{
+            text-align: center;
+            font-size: 44px;
+            font-style: normal;
+            font-weight: 600;
+            color: #4772E6;
+        }
+
         svg{
             width: 40px;
             height: 40px;
