--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -2,8 +2,9 @@
     --container-width: 1270px;
     --container-padding-all: 15px;
     --container-padding-side: 50px;
+    --container-padding-top: 80px;
     
-    --Personal-colors-black: #000;
+    
     --secondary-text: #606060;
     
     --Gradients-Gradient-1: linear-gradient(45deg, #4772E6 23.91%, #8E54E9 75.06%);
